<?xml version="1.0"?>
<package format="3">
  <name>gesture_ros_bridge</name>
  <version>0.0.0</version>
  <description>Gesture recognizer ROS 2 bridge</description>
  <maintainer email="rumani@todo.todo">rumani</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>opencv-python</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

